Adds text stats

--- a/css/main.scss
+++ b/css/main.scss
@@ -74,6 +74,9 @@ h2, label {
 
 }
 
+.bottom-info {
+	display: none;
+}
 .text-stats {
     font-family: 'Open Sans', sans-serif!important;
     padding: 30px 0;
