--- a/css/main.scss
+++ b/css/main.scss
@@ -13,6 +13,13 @@ body {
     font-family: 'Open Sans Light', 'Open Sans', sans-serif;
       font-size: 10pt;
     background: $bg-color;
+	
+	 display: flex;
+    min-height: 100vh;
+    -ms-flex-direction: column;
+    flex-direction: column;
+
+	
 }
 
 .container {
@@ -93,6 +100,9 @@ h2, label {
     border-bottom: 1px solid $border-color;
     margin: 30px 0;
     font-size: 12pt;
+	li {
+		//display: none;
+	}
 }
 .gray {
     color: $gray;
