--- a/css/main.scss
+++ b/css/main.scss
@@ -32,7 +32,7 @@ body {
 
 .container-plain {
 	padding: 0;
-    margin-left: -40px;
+    margin-left: -25px;
 }
 
 .full-width {
@@ -66,6 +66,31 @@ body {
 .col-lg-4 {
 	padding-left: 0;
 }
+
+.legend-holder {
+	padding-top: 10px;
+	text-align: right;
+	display: none;
+}
+.legend-block {
+	&.past {
+		.color {
+			background: #5b9ec9;
+		}
+	}
+	&.present {
+		.color {
+			background: #7eba98;
+		}
+	}
+	.color {
+		width: 18px;	
+		height: 18px;
+		display: inline-block;
+		vertical-align: text-bottom;
+	}
+}
+
 .input-holder {
     label,input {
         display: block;
