--- a/css/main.scss
+++ b/css/main.scss
@@ -83,7 +83,7 @@ body {
 .about-content {
 	display: none;
 		&.modal-open {
-			position: absolute;
+			position: fixed;
 			margin-top: -30px;
 			padding: 20px;
 			background: rgba(0, 0, 0, 0.84);
