--- a/css/main.scss
+++ b/css/main.scss
@@ -7,22 +7,49 @@ $light-gray: #d6d6d6;
 $border-color: #e4e4e4;
 
 body {
-    border-top: 30px solid $main-color;
+    //border-top: 30px solid $main-color;
     border-bottom: 10px solid $main-color;
       color: $text-color;
 //font-family: 'Open Sans Light';
     font-family: 'Open Sans Light', 'Open Sans', sans-serif;
       font-size: 10pt;
     background: $bg-color;
-	
 	 display: flex;
     min-height: 100vh;
-    -ms-flex-direction: column;
-    flex-direction: column;
-
-	
+    flex-direction: column;	
 }
-
+.thin-nav-inner.container {
+	padding: 0 10px;
+}
+.thin-nav {
+	background: $main-color;
+	height: 30px;
+	color: white;
+	.inner {
+		padding: 0 10px;
+	}
+	li {
+		float: left;
+		list-style: none;
+		margin: 0 10px;
+	}
+	a {
+		color: white;
+		text-decoration: none;
+		vertical-align: -webkit-baseline-middle;
+		&:hover {
+			color: white;
+			text-decoration: underline;
+		}
+		&.active {
+			color: #bbb;
+			&:hover {
+				text-decoration: none;
+				color: #d4d4d4;
+			}
+		}
+	}
+}
 .container {
     display: block;
     //max-width: 75em;
@@ -55,11 +82,17 @@ body {
     &:last-of-type {
         margin-bottom: 0;
     }
-	&.flex {
-		display: flex;
-    	flex-wrap: wrap!important;
-	}
 }
+
+.flex {
+	display: flex;
+	flex-wrap: wrap!important;
+}
+.flex-one {
+	display: flex;
+	flex: 1;
+}
+
 .col {
 	max-width: 380px;
 }
@@ -220,7 +253,7 @@ span,button {
     color: $text-color;
 }
 .inner-container {
-    padding: 12px 40px;
+    padding: 12px 0;
 }
 .year-born {
         //margin-bottom: 60px;
@@ -238,9 +271,13 @@ span,button {
     border: 1px $light-gray solid;
 //    border-bottom: 10px solid $main-color;
     display: flex;
+    flex-wrap: wrap;
     align-items: flex-start;
     padding: $pad-m;
 	min-height: 300px;
+	&.no-row {
+		display: block;
+	}
 }
 .input-group {
     
@@ -928,4 +965,10 @@ input[type="text"],input[type="number"] {
 }
 .selectize-dropdown .optgroup:first-child {
   border-top: 0 none;
+}
+
+.dataTables_wrapper {
+	width: 100%;
+    overflow: auto;
+    padding: 15px 30px;
 }
