--- a/css/main.scss
+++ b/css/main.scss
@@ -77,7 +77,7 @@ body {
 }
 
 .navbar {
-    border: 1px solid $border-color;
+    border: none;
     border-bottom: 3px solid $border-color;
     width: 100%;
     background: white;
